<resources>
    <string name="app_name">Screen Capture</string>
    <string name="home">Home</string>
    <string name="screenshots">Screenshots</string>
    <string name="settings">Settings</string>
    <string name="screen_capture">Screen Capture</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_message">Hey! I found this free app for taking screenshots without letting them know.\nDownload here\nhttps://play.google.com/store/apps/details?id=</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screenshots_captured">Screenshots captured</string>
    <string name="tap_record_button_to_start_taking_screen_shots">Tap record button to start taking screen shots</string>
    <string name="delete">Delete</string>
    <string name="create_notification">Create Notification</string>
    <string name="how_it_works">How it Works?</string>
    <string name="how_it_works_description">1. Create Notification View by clicking the \'Create Notification\' button above. \n 2. Click on the start button to start taking screenshots in burst mode. \n 3. Click on the stop button to stop taking screenshots. \n 4. Review all taken screenshots.</string>
    <string name="no_screenshots_taken">No Screenshots taken!</string>

    <string-array name="max_images">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
    </string-array>


    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="general">General</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="general_nickname">Your nick name</string>
    <string name="signature_title">Your signature</string>
    <string name="game_level">Game level</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="update_auto">Auto update</string>


    <string name="max_no_of_images">Max no of Images</string>
    <string name="screen_capture_privacy_policy">Screen Capture Privacy Policy</string>
    <string name="privacy_policy_about">Released on September 11, 2022 \nWe, Screen Capture, regards your information significant and release this Privacy Policy to inform you what information we collect and how we use it to personalize and continually improve you experience. This Privacy Policy applies to Screen Capture app (hereinafter App), which is available by following URL: https://play.google.com/store/apps/details?id=com.screencapture.android</string>
    <string name="information_we_collect">Information We Collect</string>
    <string name="personal_information">Personal Information:</string>
    <string name="collect_personal_information">We do not collect Personal Information. Personal Information is information that identifies you or another person, such as your first name and last name, physical addresses, email addresses, telephone, fax, SSN, information stored within your device.</string>
    <string name="non_personal_information">Non-personal Information:</string>
    <string name="collect_non_personal">We collect your non-personal information when you use our App, including your information about device, operating system, such as screen resolution, amount of RAM and model of CPU.</string>
    <string name="information_you_provide">Information you provide:</string>
    <string name="collect_you_provide">We may collect your information when you communicate or give us.</string>
    <string name="how_we_use_information">How we use information?</string>
    <string name="use_personal_information">We do not store Personal Information,therefore we do not disclose your Personal Information.</string>
    <string name="use_non_personal_information">We do not sell, trade, or otherwise transfer to outside parties your information. We do not combine Non-Personal Information with Personal Information (such as combining your name with your unique User Device number).</string>
    <string name="legal_reasons">Legal Reasons:</string>
    <string name="legal_reasons_desc">We will access, use or disclose your information with other organizations or entities for reasons that required by any applicable law, regulation, legal process or enforceable governmental request; detect, prevent, or otherwise fraud, security or technical issues; protect against harm to the rights, property or safety of ScreenCapture, our users or the public as required or permitted by law.</string>
    <string name="security">Security:</string>
    <string name="security_desc">Screen Capture is very concerned about safeguarding the confidentiality of your information. We do not collect Personal Information, and we employ administrative, physical and electronic measures designed to protect your Non-Personal Information from unauthorized access and use. Please be aware that no security measures that we take to protect your information is absolutely guaranteed to avoid unauthorized access or use of your Non-Personal Information which is impenetrable. Sensitive Information We ask that you not send us, and you not disclose, any sensitive Personal Information (e.g., information related to racial or ethnic origin, political opinions, religion or other beliefs, health, sexual orientation, criminal background or membership in past organizations, including trade union memberships) on or through the App or otherwise to us.</string>
    <string name="content_rating">Content Rating:</string>
    <string name="content_rating_desc">1.The App does not contain pictures or sounds likely to be scary or horrifying.\n2.The App does not contain inferences of, references to, or depictions of sexuality, sexual violence, suggestiveness, provocative attire, or nudity.\n3.The App does not contain simulations of betting or gambling that is normally played/carried out in casinos, gambling halls, or racetracks.\n4.The App does not contain any potentially offensive language.\n5.The App does not contain any reference to or use of drugs, alcohol, or tobacco.\n6.The App does not contain any bodily functions such as belching, flatulence, or vomiting when used for humorous purposes.\n7.The App does not allow users of this App interact or exchange content with other users.\n8.The App does not share user-provided personal information with third parties.\n9.The App does not share the user\'s current physical location to other users.\n10.The App does not allow users to purchase digital goods.\n11.The App does not contain any Nazi symbols, references, or propaganda.\n12.The App does not contain detailed descriptions of techniques that could be used in criminal offenses.\n13.The App does not advocate committing acts of terrorism.\n14.All of the items above does not refer to user generated content.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">If you have any questions or comments about this Policy or our privacy practices, or to report any violations of the Policy or abuse of the App, please contact us at tehmooramjad175@gmail.com</string>
    <string name="change_in_privacy_policies">Change in Privacy Policies</string>
    <string name="change_in_privacy_desc">Our Privacy Policy may change from time to time. We will not reduce your rights under this Privacy Policy without your explicit consent. We will post any privacy policy changes on this page, so please review it periodically. If you do not agree to any modifications to this Policy, you could immediately stop all use of the App. We will also keep prior versions of this Privacy Policy in an archive for your review.</string>


    <!--Ads Id -->
    <string name="home_banner_ad_id">ca-app-pub-4081672806980368/8601187082</string>
    <string name="settings_banner_ad_id">ca-app-pub-4081672806980368/2718552430</string>
    <string name="screenshots_banner_ad_id">ca-app-pub-4081672806980368/4961572399</string>
    <string name="image_banner_ad_id">ca-app-pub-4081672806980368/4770000704</string>
    <string name="screenshot_interstitial_ad_id">ca-app-pub-4081672806980368/7807227588</string>
    <string name="banner_test_ad_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Google Ads    -->
    <string name="ads_app_id">ca-app-pub-4081672806980368~1297412133</string>


<!--    Testing -->
<!--
    <string name="home_banner_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="settings_banner_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="screenshots_banner_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="image_banner_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="screenshot_interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ads_app_id">ca-app-pub-3940256099942544~3347511713</string>
-->

</resources>