<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/App18SpTextViewStyle.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="@+id/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_btn"
            android:text="@string/create_notification"
            style="@style/App16SpTextViewStyle.Medium"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:paddingVertical="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/how_it_works_tv"
            style="@style/App22SpTextViewStyle.Bold"
            android:layout_margin="@dimen/_24sdp"
            android:text="@string/how_it_works"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_btn" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/steps_tv"
            style="@style/App18SpTextViewStyle.Medium"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:lineSpacingExtra="@dimen/_8sdp"
            android:text="@string/how_it_works_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/how_it_works_tv" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>