<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"
        tools:context=".ui.image.ImageActivity">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/image_banner_ad_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@id/btn_lyt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adView" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:icon="@drawable/ic_share"
                android:layout_weight="1"
                app:iconTint="@color/green"
                android:textColor="@color/green"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/mont_semibold"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:icon="@drawable/ic_delete"
                android:layout_weight="1"
                app:iconTint="@color/red"
                android:textColor="@color/red"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/mont_semibold"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>